--- a/index.html
+++ b/index.html
@@ -12,27 +12,26 @@
     <div class="container">
         <div class="fecha">
             <div class="dia">
+                lunes
+            </div><div class="dia_numero">
+29 de 
+            </div><div class="mes">
+mayo de 
+            </div><div class="fullyear">
+2021
+            </div>
+        </div>
+        <div class="hora_minuto_segundo">
+            <div class="hora">
 
             </div>
-            <div class="mes">
+            <div class="minuto">
 
             </div>
-            <div class="fullyear">
+            <div class="segundo">
 
             </div>
         </div>
-    <div class="hora_minuto_segundo">
-        <div class="hora">
-
-        </div>
-        <div class="minuto">
-
-        </div>
-        <div class="segundo">
-
-        </div>
-    </div>
-
     </div>
     <script src="js/reloj.js"></script>
 </body>
