creacion de id's en los div de fecha

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container">
         <div class="fecha">
-            <div class="dia">
-                lunes
-            </div><div class="dia_numero">
-29 de 
-            </div><div class="mes">
-mayo de 
-            </div><div class="fullyear">
-2021
+            <div class="dia" id="dia">
+                
+            </div><div class="dia_numero" id="dia_numero">
+
+            </div><div class="mes" id="mes">
+
+            </div><div class="fullyear" id="fullyear">
+
             </div>
         </div>
         <div class="hora_minuto_segundo">
