creacion de div para indicacion de am y pm

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div class="segundo">
 
             </div>
+            <div class="am_pm" id="am_pm">
+                
+            </div>
         </div>
     </div>
     <script src="js/reloj.js"></script>
