--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
         <div class="hora_minuto_segundo">
             <div class="hora">
 
-            </div>
-            <div class="minuto">
+            </div><div class="minuto">
 
-            </div>
-            <div class="segundo">
+            </div><div class="segundo">
 
-            </div>
-            <div class="am_pm" id="am_pm">
-                
+            </div><div class="am_pm" id="am_pm">
+
             </div>
         </div>
     </div>
