se agregan los ids para la seccion de hora, minuto, segundo, am-pm

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
         </div>
         <div class="hora_minuto_segundo">
-            <div class="hora">
+            <div class="hora" id="hora">
 
-            </div><div class="minuto">
+            </div><div class="minuto" id="minuto">
 
-            </div><div class="segundo">
+            </div><div class="segundo" id="segundo">
 
             </div><div class="am_pm" id="am_pm">
 
