se realiza la creacion de estilos css y modificacion de HTML para reloj javascript

--- a/index.html
+++ b/index.html
@@ -11,28 +11,40 @@
 <body>
     <div class="container">
         <div class="fecha">
-            <div class="dia" id="dia">
-                
-            </div><div class="dia_numero" id="dia_numero">
-
-            </div><div class="mes" id="mes">
-
-            </div><div class="fullyear" id="fullyear">
-
-            </div>
+            <p class="dia" id="dia">
+                martes, 
+            </p>
+            <p class="dia_numero" id="dia_numero">
+01 de
+            </p>
+            <p class="mes" id="mes">
+                junio
+            </p>
+            <p class="fullyear" id="fullyear">
+                2021
+            </p>
         </div>
         <div class="hora_minuto_segundo">
-            <div class="hora" id="hora">
-
-            </div><div class="minuto" id="minuto">
-
-            </div><div class="segundo" id="segundo">
-
-            </div><div class="am_pm" id="am_pm">
-
-            </div>
+            <p class="hora" id="hora">
+                02
+            </p>
+            <p class="puntos_separacion">
+                :
+            </p>
+            <p class="minuto" id="minuto">
+                50
+            </p>
+            <p class="puntos_separacion">
+                :
+            </p>
+            <p class="segundo" id="segundo">
+                30
+            </p>
+            <p class="am_pm" id="am_pm">
+                PM
+            </p>
         </div>
     </div>
-    <script src="js/reloj.js"></script>
+    <!--script src="js/reloj.js"></script-->
 </body>
 </html>
