se cambian las estructuras div de las variables por tags p

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
             </p>
         </div>
     </div>
-    <!--script src="js/reloj.js"></script-->
+    <script src="js/reloj.js"></script>
 </body>
 </html>
