se agrega footer y sus respectivos estilos en css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </p>
         </div>
     </div>
+    <footer><p>Creado por: Miller Rodriguez &copy; Todos los derechos reservados</p></footer>
     <script src="js/reloj.js"></script>
 </body>
 </html>
